--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "suda",
-  "version": "1.0.0",
-  "description": "experimental discord bot",
-  "main": "discord_bot.js",
-  "readme": "README.md",
-  "dependencies": {
-    "arraylist": "^0.1.0",
-    "discord.js": "^11.1.0",
-    "pm2": "^2.5.0",
-    "request": "^2.81.0",
-    "string.prototype.padend": "^3.0.0",
-    "warframe-worldstate-parser": "^1.7.6"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ebjohnston/suda.git"
-  },
-  "keywords": [
-    "discord",
-    "bot",
-    "music",
-    "warframe"
-  ],
-  "author": "Ethan Johnston",
-  "license": "\tISC",
-  "bugs": {
-    "url": "https://github.com/ebjohnston/suda/issues"
-  },
-  "homepage": "https://github.com/ebjohnston/suda#readme"
+    "name": "suda",
+    "version": "1.0.0",
+    "description": "experimental discord bot",
+    "main": "core.js",
+    "readme": "README.md",
+    "dependencies": {
+        "arraylist": "^0.1.0",
+        "discord.js": "^11.1.0",
+        "pm2": "^2.5.0",
+        "request": "^2.81.0",
+        "string.prototype.padend": "^3.0.0",
+        "warframe-worldstate-parser": "^1.7.6"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ebjohnston/suda.git"
+    },
+    "keywords": [
+        "discord",
+        "bot",
+        "music",
+        "warframe"
+    ],
+    "author": "Ethan Johnston",
+    "license": "\tISC",
+    "bugs": {
+        "url": "https://github.com/ebjohnston/suda/issues"
+    },
+    "homepage": "https://github.com/ebjohnston/suda#readme"
 }
