--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-    "name": "suda",
-    "version": "1.0.0",
-    "description": "experimental discord bot",
-    "main": "core.js",
-    "readme": "README.md",
-    "dependencies": {
-        "arraylist": "^0.1.0",
-        "discord.js": "^11.1.0",
-        "request": "^2.81.0",
-        "string.prototype.padend": "^3.0.0",
-        "warframe-worldstate-parser": "^1.7.6",
-        "cheerio": "^1.0.0-rc.2"
-    },
-    "devDependencies": {
-        "pm2": "^2.5.0",
-        "standard": "^11.0.1"
-    },
-    "scripts": {
-        "test": "standard",
-        "fix": "standard --fix"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ebjohnston/suda.git"
-    },
-    "keywords": [
-        "discord",
-        "bot",
-        "music",
-        "warframe"
-    ],
-    "author": "Ethan Johnston",
-    "license": "\tISC",
-    "bugs": {
-        "url": "https://github.com/ebjohnston/suda/issues"
-    },
-    "homepage": "https://github.com/ebjohnston/suda#readme"
+  "name": "suda",
+  "version": "1.0.0",
+  "description": "experimental discord bot",
+  "main": "src/core/core.js",
+  "readme": "README.md",
+  "dependencies": {
+    "arraylist": "^0.1.0",
+    "discord.js": "^11.1.0",
+    "request": "^2.81.0",
+    "string.prototype.padend": "^3.0.0",
+    "warframe-worldstate-parser": "^1.7.6",
+    "cheerio": "^1.0.0-rc.2"
+  },
+  "devDependencies": {
+    "pm2": "^3.0.0",
+    "standard": "^11.0.1"
+  },
+  "scripts": {
+    "start" : "npm install && node src/core/core.js",
+    "test": "standard",
+    "fix": "standard --fix"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ebjohnston/suda.git"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "music",
+    "warframe"
+  ],
+  "author": "Ethan Johnston",
+  "license": "\tISC",
+  "bugs": {
+    "url": "https://github.com/ebjohnston/suda/issues"
+  },
+  "homepage": "https://github.com/ebjohnston/suda#readme"
 }
