--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "suda",
   "version": "1.0.0",
   "description": "experimental discord bot",
-  "main": "src/core/core.js",
+  "main": "src/core/main.js",
   "readme": "README.md",
   "dependencies": {
     "@discordjs/rest": "^0.3.0",
@@ -11,7 +11,11 @@
     "cheerio": "^1.0.0-rc.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
-    "request": "^2.88.0",
+    "got": "^12.0.1",
+    "got-cjs": "^12.0.1",
+    "http": "^0.0.1-security",
+    "plex-api": "^5.3.2",
+    "request": "^2.88.2",
     "string.prototype.padend": "^3.0.0",
     "warframe-worldstate-parser": "^1.7.6",
     "youtube-dl-exec": "^2.0.2",
@@ -23,7 +27,7 @@
     "standard": "^16.0.4"
   },
   "scripts": {
-    "start": "npm install && node src/core/core.js",
+    "start": "npm install && node src/core/main.js",
     "test": "standard",
     "fix": "standard --fix"
   },
