--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cheerio": "^1.0.0-rc.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
+    "ffmpeg-static": "^4.4.1",
     "got": "^12.0.1",
     "got-cjs": "^12.0.1",
     "http": "^0.0.1-security",
